# ocaml-topojson

./: .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dune  dune-project  geo.json  geojson.opam.template  topojson.opam  topojson.opam.template  topojsone.opam  topojsonm.opam
doc/: prelude.ml  prelude.txt
src/topojson/: dune  index.mld  topojson.ml  topojson.mli  topojson_intf.ml
src/topojsone/: topojsone.ml  topojsone.mli
src/topojsonm/: dune  topojsone.ml  topojsone.mli  topojsonm.ml  topojsonm.mli
test/topojson/: dune  test.ml
test/topojson/test_cases/: properties.json
test/topojson/test_cases/files/: exemplar.json  multilinestring.json
test/topojsone/expected/: dune  test.ml
test/topojsonm/expected/: dune  test.expected  test.ml
test/topojsonm/expected/input/: simple.topojson
